--- a/lealphone.css
+++ b/lealphone.css
@@ -55,6 +55,7 @@ figcaption{
 }
 figure{
     text-align: center;
+   
 }
 li{
     text-align: justify;
@@ -82,14 +83,24 @@ li{
 .im1{
     width: 15%;
 }
+.im5{
+text-align: center;
+    border-radius: 10px;
+    width: 80%;
+   
+}
+.f2{
+    margin: 40px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
 img{
     width: 20%;
 }
 .p1{
     text-align: center;
     font-size: 40px;
-  
-
 }
 
 .p2{
@@ -122,15 +133,29 @@ img{
     float:left;
     display: flex;
     left:1160px;
+    bottom: 300px;
     
 }
 a{
     text-decoration: none;
     color: white;
-    padding: 10px 30px;
+    padding:30px;
+    padding-top: 0 20px;
 }
 a:hover{
 color: orange;
 border-radius: 20px;
 
+}
+@media (max-width:678px){
+    
+    *{
+        font-size: 23px;
+    }
+    header{
+        height: 20vh;
+    }
+   a{
+    font-size: 12px;
+   }
 }
